--- a/nrutils/config/sxs.template
+++ b/nrutils/config/sxs.template
@@ -5,15 +5,19 @@ institute = sxs
 #
 metadata_id = metadata.asc
 
-# Directory where all smulation folders are stored. The assumtion is that each simulation folder contains a realted metadata file with a filname which contains the metadata_id
+# Directory where all smulation folders are stored. The assumtion is that each simulation folder contains a related metadata file with a filname which contains the metadata_id
 catalog_dir = /Users/book/GARREG/SXS/
 
-#
-data_file_name_format = Extrapolated_N%i/rMPsi4_Y_l%i_m%i.asc, Extrapolated_N%i/rMPsi4_Y_l%i_m%i.asc
-data_file_param_order = extraction_parameter, l, m
+ # NOTE standard parameter order for every simulation catalog
+ # extraction_parameter, l, m, level
+ # Also NOTE that only default extraction_parameter and level are to be specified in this file. The multipolar indeces l andm must be input at waveform loadeding via instances of the gwylm class.
 
-#
-default_extraction_par = 2
+# NOTE that the ordering here is: extraction_parameter, l, m, level
+# NOTE that information on the string formatting here can be found at https://pyformat.info/
+data_file_name_format = Extrapolated_N{0:d}/rMPsi4_Y_l{1:d}_m{2:d}.asc
+
+# NOTE that the ordering here is: default_extraction_parameter, default_level. NOTE that not all groups use level as a sepcifier and that not all levels exist for each single simulation.
+default_par_list = 2,4
 
 #
 is_extrapolated = 1
