--- a/nrutils/config/minion.template
+++ b/nrutils/config/minion.template
@@ -21,7 +21,10 @@ data_file_name_format = /Psi4ModeDecomp/psi3col.r{0:d}.l{3:d}.l{1:d}.m{2:d}.gz
 default_par_list = 5,5
 
 #
-is_extrapolated = 1
+is_extrapolated = 0
+
+# Toggle for whether waveform is scaled by extration radius or not
+is_rscaled = 0
 
 #
 handler_location = /Users/book/JOKI/Libs/KOALA/nrutils_dev/nrutils/handlers/bam.py
