--- a/nrutils/config/sxs.template
+++ b/nrutils/config/sxs.template
@@ -6,11 +6,11 @@ institute = sxs
 metadata_id = metadata.asc
 
 # Directory where all smulation folders are stored. The assumtion is that each simulation folder contains a related metadata file with a filname which contains the metadata_id
-catalog_dir = /Users/book/GARREG/SXS/
+catalog_dir = /Users/sebastian/work/mnt/minion_mount/mnt/hogshead/NR_data/SXS
 
- # NOTE standard parameter order for every simulation catalog
- # extraction_parameter, l, m, level
- # Also NOTE that only default extraction_parameter and level are to be specified in this file. The multipolar indeces l andm must be input at waveform loadeding via instances of the gwylm class.
+# NOTE standard parameter order for every simulation catalog
+# extraction_parameter, l, m, level
+# Also NOTE that only default extraction_parameter and level are to be specified in this file. The multipolar indeces l andm must be input at waveform loadeding via instances of the gwylm class.
 
 # NOTE that the ordering here is: extraction_parameter, l, m, level
 # NOTE that information on the string formatting here can be found at https://pyformat.info/
@@ -22,5 +22,8 @@ default_par_list = 2,4
 #
 is_extrapolated = 1
 
+# Toggle for whether waveform is scaled by extration radius or not
+is_rscaled = 1
+
 #
-handler_location = /Users/book/JOKI/Libs/KOALA/nrutils_dev/nrutils/handlers/sxs.py
+handler_location = /Users/sebastian/work/git/nrutils_dev/nrutils/handlers/sxs.py
