--- a/nrutils/config/uib.template
+++ b/nrutils/config/uib.template
@@ -23,5 +23,8 @@ default_par_list = 5,5
 #
 is_extrapolated = 1
 
+# Toggle for whether waveform is scaled by extration radius or not
+is_rscaled = 0
+
 #
 handler_location = /Users/book/JOKI/Libs/KOALA/nrutils_dev/nrutils/handlers/bam.py
