minor changes to match config

--- a/workflows/matches/config.ini
+++ b/workflows/matches/config.ini
@@ -19,9 +19,9 @@ simulation_keyword = q18a0aM08c025_96_fine
 ; Define the angular resolution for theta, and signal pol/phase
 ; ------------------------------------------------------------------- ;
 # Number of inclinations (same inclination is used for NR and model)
-N_inclinations = 5; 23
+N_inclinations = 15; 23
 # Number of signal POLARIZATIONS to consider for min/max/mean
-N_PSI_signal = 5;8
+N_PSI_signal = 7;8
 # Number of signal ORBITAL PHASE values to consider for min/max/mean
 N_phi_signal = 7;11
 
@@ -31,18 +31,18 @@ N_phi_signal = 7;11
 ; NOTE that if this is empty, then ALL multipoles with l<=5 are used
 ; NOTE that this must be python LIST of TUPLES
 ; ------------------------------------------------------------------- ;
-nrlmlist = [(2,2)] # [(2,2),(2,1),(3,2),(4,4),(4,3)]
+nrlmlist = ; [(2,2)] # [(2,2),(2,1),(3,2),(4,4),(4,3)]
 
 
 ; ------------------------------------------------------------------- ;
 ; Total Mass (Solar), Distance (Mpc), fmin (Hz)
 ; NOTE that the distance is used for SNR diagnostics only
-; NOTE that if fmin is empty, then an algorithm determines the
+; NOTE that if fmin is empty/undefined, then an algorithm determines the
 ; lowest fmin using the NR data
 ; NOTE that the default fmax value is 400 Hz
 ; ------------------------------------------------------------------- ;
 M = 90      # Total system mass (M_Solar)
-fmin = 30   # Min frequency of waveforms (FD Crop) in Hz (same as fmin for integration)
+;fmin = 30   # Min frequency of waveforms (FD Crop) in Hz (same as fmin for integration)
 ;distance = 450 # Distance of bianry in Mpc
 ;fmax = 300  # Max frequency for waveforms & inteegration via cropping
 
@@ -51,5 +51,5 @@ fmin = 30   # Min frequency of waveforms (FD Crop) in Hz (same as fmin for integ
 ; Some diagnostic plots will be made at the fixed inclination defined
 ; below. NOTE that this is in radians; PI, Pi and pi are acceptable
 ; ------------------------------------------------------------------- ;
-diagnostic_inclination = 0
+diagnostic_inclination = pi/2
 diagnostic_phase = 0
