--- a/workflows/matches/config.ini
+++ b/workflows/matches/config.ini
@@ -13,7 +13,7 @@ outdir = ~/Desktop/
 ; Keyword this is used in scsearch to find the simulation catalog entry
 ; ------------------------------------------------------------------- ;
 ; simulation_keywords = q18a0aM08c025_96_fine, q18a0aM04c025_96_fine
-simulation_keywords = q4a05_T_96_384, q18a0aM08c025_96_fine, q8am085v6D10_96c025, q8++0.85_T_80_200_-4pc, q18a0a0c025_144, q4aM05_T_96_384, q4a075_T_112_448, q18a0a04c025v4_eta1_T_120_SH, q4aM075_T_112_448
+simulation_keywords = q18a0aM04c025_96_fine, q4a05_T_96_384, q18a0aM08c025_96_fine, q8am085v6D10_96c025, q8++0.85_T_80_200_-4pc, q18a0a0c025_144, q4aM05_T_96_384, q4a075_T_112_448, q18a0a04c025v4_eta1_T_120_SH, q4aM075_T_112_448
 
 
 ; ------------------------------------------------------------------- ;
