--- a/nrutils/config/bradwr.ini
+++ b/nrutils/config/bradwr.ini
@@ -6,7 +6,7 @@ institute = gt
 metadata_id = .par
 
 # Directory where all smulation folders are stored. The assumtion is that each simulation folder contains a related metadata file with a filname which contains the metadata_id
-catalog_dir = /Volumes/ekwu/bradwr/, /Volumes/athena/bradwr/, /Users/book/MOUNT/datafiles@gatech/Waveforms/, /mnt/hogshead/NR_data/GT-MAYA/, /nethome/numrel/datafiles/Waveforms/
+catalog_dir = /Volumes/ekwu/bradwr/, /Volumes/athena/bradwr/, /Users/book/MOUNT/datafiles@gatech/Waveforms/, /mnt/hogshead/NR_data/GT-MAYA/, /nethome/numrel/datafiles/Waveforms/, /Users/book/MOUNT/tmp/mnt/hogshead/NR_data/GT-MAYA/
 
 # NOTE standard parameter order for every simulation catalog
 # extraction_parameter, l, m, level
@@ -26,5 +26,5 @@ is_extrapolated = 0
 # Toggle for whether waveform is scaled by extration radius or not
 is_rscaled = 0
 
-#
-handler_location = /Users/book/JOKI/Libs/KOALA/nrutils_dev/nrutils/handlers/maya.py
+# Name of handler file within install directory: .../nrutils/handlers/[handler_name].py
+handler_name = maya
