removing outdated templates; new users should add their data location to the related config_dir within ini files; they can commit this change with no effect on others

--- a/nrutils/config/minion.ini
+++ b/nrutils/config/minion.ini
@@ -1,12 +1,12 @@
 
 #
-institute = sxs
+institute = bam
 
 #
-metadata_id = metadata.asc
+metadata_id = .bbh
 
 # Directory where all smulation folders are stored. The assumtion is that each simulation folder contains a related metadata file with a filname which contains the metadata_id
-catalog_dir = /Users/book/GARREG/SXS/
+catalog_dir = /Users/book/MOUNT/tmp/raid/data/ReducedData
 
 # NOTE standard parameter order for every simulation catalog
 # extraction_parameter, l, m, level
@@ -14,16 +14,17 @@ catalog_dir = /Users/book/GARREG/SXS/
 
 # NOTE that the ordering here is: extraction_parameter, l, m, level
 # NOTE that information on the string formatting here can be found at https://pyformat.info/
-data_file_name_format = Extrapolated_N{0:d}/rMPsi4_Y_l{1:d}_m{2:d}.asc
+data_file_name_format = /Psi4ModeDecomp/psi3col.r{0:d}.l{3:d}.l{1:d}.m{2:d}.gz
+
 
 # NOTE that the ordering here is: default_extraction_parameter, default_level. NOTE that not all groups use level as a sepcifier and that not all levels exist for each single simulation.
-default_par_list = 2,4
+default_par_list = 5,5
 
 #
-is_extrapolated = 1
+is_extrapolated = 0
 
 # Toggle for whether waveform is scaled by extration radius or not
 is_rscaled = 1
 
 # Name of handler file within install directory: .../nrutils/handlers/[handler_name].py
-handler_name = sxs
+handler_name = bam
