--- a/nrutils/config/silures.ini
+++ b/nrutils/config/silures.ini
@@ -6,7 +6,7 @@ institute = bam
 metadata_id = .bbh
 
 # Directory where all smulation folders are stored. The assumtion is that each simulation folder contains a related metadata file with a filname which contains the metadata_id
-catalog_dir = /Users/book/MOUNT/tmp/raid/data/ReducedData
+catalog_dir = /Volumes/athena/silures/, /Volumes/ekwu/silures/, /Users/book/MOUNT/tmp/mnt/hogshead/NR_data/Mirror/Machines/UIBAtlas/data/Reduced_Data/
 
 # NOTE standard parameter order for every simulation catalog
 # extraction_parameter, l, m, level
@@ -20,11 +20,11 @@ data_file_name_format = /Psi4ModeDecomp/psi3col.r{0:d}.l{3:d}.l{1:d}.m{2:d}.gz
 # NOTE that the ordering here is: default_extraction_parameter, default_level. NOTE that not all groups use level as a sepcifier and that not all levels exist for each single simulation.
 default_par_list = 5,5
 
-#
+# Toggle for whether waveform data is extrapolated to infinity
 is_extrapolated = 0
 
 # Toggle for whether waveform is scaled by extration radius or not
-is_rscaled = 0
+is_rscaled = 1
 
 # Name of handler file within install directory: .../nrutils/handlers/[handler_name].py
 handler_name = bam
