--- a/nrutils/config/hogshead.ini
+++ b/nrutils/config/hogshead.ini
@@ -1,12 +1,12 @@
 
 #
-institute = gt
+institute = bam
 
 #
-metadata_id = .par
+metadata_id = .bbh
 
 # Directory where all smulation folders are stored. The assumtion is that each simulation folder contains a related metadata file with a filname which contains the metadata_id
-catalog_dir = /Volumes/athena/bradwr/
+catalog_dir = ~/MOUNT/tmp/mnt/hogshead/NR_data/ReducedData-hogshead/dirac-nr-followup/
 
 # NOTE standard parameter order for every simulation catalog
 # extraction_parameter, l, m, level
@@ -14,17 +14,17 @@ catalog_dir = /Volumes/athena/bradwr/
 
 # NOTE that the ordering here is: extraction_parameter, l, m, level
 # NOTE that information on the string formatting here can be found at https://pyformat.info/
-data_file_name_format = mp_WeylScal4::Psi4i_l{1:d}_m{2:d}_r{0:d}.00.asc, Ylm_WEYLSCAL4::Psi4r_l{1:d}_m{2:d}_r{0:d}.00.asc
+data_file_name_format = /Psi4ModeDecomp/psi3col.r{0:d}.l{3:d}.l{1:d}.m{2:d}.gz
 
 
 # NOTE that the ordering here is: default_extraction_parameter, default_level. NOTE that not all groups use level as a sepcifier and that not all levels exist for each single simulation.
-default_par_list = 75,0
+default_par_list = 5,5
 
 #
-is_extrapolated = 0
+is_extrapolated = 1
 
 # Toggle for whether waveform is scaled by extration radius or not
-is_rscaled = 0
+is_rscaled = 1
 
 # Name of handler file within install directory: .../nrutils/handlers/[handler_name].py
-handler_name = maya
+handler_name = bam
