--- a/nrutils/config/minion.ini
+++ b/nrutils/config/minion.ini
@@ -6,6 +6,7 @@ institute = bam
 metadata_id = .bbh
 
 # Directory where all smulation folders are stored. The assumtion is that each simulation folder contains a related metadata file with a filname which contains the metadata_id
+# NOTE: Add your data location after a comma, and then feel free to commit.
 catalog_dir = /Users/book/MOUNT/tmp/raid/data/ReducedData
 
 # NOTE standard parameter order for every simulation catalog
@@ -20,7 +21,7 @@ data_file_name_format = /Psi4ModeDecomp/psi3col.r{0:d}.l{3:d}.l{1:d}.m{2:d}.gz
 # NOTE that the ordering here is: default_extraction_parameter, default_level. NOTE that not all groups use level as a sepcifier and that not all levels exist for each single simulation.
 default_par_list = 5,5
 
-#
+# Flag for whether waveform data is extrapolated to infinity
 is_extrapolated = 0
 
 # Toggle for whether waveform is scaled by extration radius or not
