--- a/nrutils/config/hogshead.ini
+++ b/nrutils/config/hogshead.ini
@@ -6,7 +6,8 @@ institute = bam
 metadata_id = .bbh
 
 # Directory where all smulation folders are stored. The assumtion is that each simulation folder contains a related metadata file with a filname which contains the metadata_id
-catalog_dir = ~/MOUNT/tmp/mnt/hogshead/NR_data/ReducedData-hogshead/dirac-nr-followup/
+#catalog_dir = ~/MOUNT/tmp/mnt/hogshead/NR_data/ReducedData-hogshead/dirac-nr-followup/
+catalog_dir = /mnt/hogshead/NR_data/ReducedData-hogshead/
 
 # NOTE standard parameter order for every simulation catalog
 # extraction_parameter, l, m, level
