adding base directory for minion users

--- a/nrutils/config/silures.ini
+++ b/nrutils/config/silures.ini
@@ -6,7 +6,7 @@ institute = bam
 metadata_id = .bbh
 
 # Directory where all smulation folders are stored. The assumtion is that each simulation folder contains a related metadata file with a filname which contains the metadata_id
-catalog_dir = /Volumes/athena/silures/, /Volumes/ekwu/silures/, /Users/book/MOUNT/tmp/mnt/hogshead/NR_data/Mirror/Machines/UIBAtlas/data/Reduced_Data/
+catalog_dir = /mnt/hogshead/NR_data/Mirror/Machines/UIBAtlas/data/Reduced_Data/ /Volumes/athena/silures/, /Volumes/ekwu/silures/, /Users/book/MOUNT/tmp/mnt/hogshead/NR_data/Mirror/Machines/UIBAtlas/data/Reduced_Data/
 
 # NOTE standard parameter order for every simulation catalog
 # extraction_parameter, l, m, level
