prepping to update minion reduced data catalog

--- a/nrutils/config/minion.ini
+++ b/nrutils/config/minion.ini
@@ -7,7 +7,7 @@ metadata_id = .bbh
 
 # Directory where all smulation folders are stored. The assumtion is that each simulation folder contains a related metadata file with a filname which contains the metadata_id
 # NOTE: Add your data location after a comma, and then feel free to commit.
-catalog_dir = /Users/book/MOUNT/tmp/raid/data/ReducedData
+catalog_dir = /raid/data/ReducedData/,/Users/book/MOUNT/tmp/raid/data/ReducedData
 
 # NOTE standard parameter order for every simulation catalog
 # extraction_parameter, l, m, level
