--- a/workflows/matches/config.ini
+++ b/workflows/matches/config.ini
@@ -6,26 +6,25 @@
 ; Directory where output folder (by simulation name) will be placed
 ; in the same location as the matches executable
 ; ------------------------------------------------------------------- ;
-outdir = ~/Desktop/test
+outdir = ~/Desktop/test/
 
 
 ; ------------------------------------------------------------------- ;
 ; Keyword this is used in scsearch to find the simulation catalog entry
 ; ------------------------------------------------------------------- ;
-; simulation_keywords = q18a0aM08c025_96_fine, q18a0aM04c025_96_fine
-; simulation_keywords = q18a0a04c025v4_eta1_T_120_SH, q8++0.85_T_80_200_-4pc, q18a0a0c025_144, q18a0aM04c025_96_fine, q4a05_T_96_384, q18a0aM08c025_96_fine, q8am085v6D10_96c025, q4aM05_T_96_384, q4a075_T_112_448, q4aM075_T_112_448
-simulation_keywords = q18a0a0c025_144
+; simulation_keywords = q18a0aM04c025_96_fine, q4a05_T_96_384, q18a0aM08c025_96_fine, q8am085v6D10_96c025, q8++0.85_T_80_200_-4pc, q18a0a0c025_144, q4aM05_T_96_384, q4a075_T_112_448, q18a0a04c025v4_eta1_T_120_SH, q4aM075_T_112_448
+simulation_keywords = q4aM075_T_112_448
 
 
 ; ------------------------------------------------------------------- ;
 ; Define the angular resolution for theta, and signal pol/phase
 ; ------------------------------------------------------------------- ;
 # Number of inclinations (same inclination is used for NR and model)
-N_inclinations = 7;17 #; 23
+N_inclinations = 17 #; 23
 # Number of signal POLARIZATIONS to consider for min/max/mean
-N_PSI_signal = 9;17 #;8
+N_PSI_signal = 17 #;8
 # Number of signal ORBITAL PHASE values to consider for min/max/mean
-N_phi_signal = 7;11 #;7;11
+N_phi_signal = 11 #;7;11
 
 ; ------------------------------------------------------------------- ;
 ; Multipoles to be used (loaded) for NR data.
@@ -44,10 +43,10 @@ nrlmlist = ;[(2,2)] # [(2,2),(2,1),(3,2),(4,4),(4,3)]
 ; NOTE that the default fmax value is 400 Hz
 ; ------------------------------------------------------------------- ;
 
-# Value of smaller BH mass in Solar units. Using this option is useful if you want to ensure that both BH masses are physical
-M2_Sol = 10
+# Total system mass in solar units
+M_Sol = 100
 
-;fmin = 30   # Min frequency of waveforms (FD Crop) in Hz (same as fmin for integration)
+fmin = 30   # Min frequency of waveforms (FD Crop) in Hz (same as fmin for integration)
 ;D_Mpc = 450 # Distance of binary source in Mpc
 ;fmax = 300  # Max frequency for waveforms & inteegration via cropping
 
