adding new hogshead mount location--thanks apple :(

--- a/nrutils/config/bradwr.ini
+++ b/nrutils/config/bradwr.ini
@@ -6,7 +6,7 @@ institute = gt
 metadata_id = .par
 
 # Directory where all smulation folders are stored. The assumtion is that each simulation folder contains a related metadata file with a filname which contains the metadata_id
-catalog_dir = /Volumes/ekwu/bradwr/, /Volumes/athena/bradwr/, /Users/book/MOUNT/datafiles@gatech/Waveforms/, /mnt/hogshead/NR_data/GT-MAYA/, /nethome/numrel/datafiles/Waveforms/, /Users/book/MOUNT/tmp/mnt/hogshead/NR_data/GT-MAYA/
+catalog_dir = /Volumes/ekwu/bradwr/, /Volumes/athena/bradwr/, /Users/book/MOUNT/datafiles@gatech/Waveforms/, /mnt/hogshead/NR_data/GT-MAYA/, /nethome/numrel/datafiles/Waveforms/, /Users/book/MOUNT/tmp/mnt/hogshead/NR_data/GT-MAYA/, /Users/jthompson/hmnt/hogshead/NR_data/GT-MAYA/
 
 # NOTE standard parameter order for every simulation catalog
 # extraction_parameter, l, m, level
