adding preliminary fix and staging configs for better fix

--- a/nrutils/config/bradwr.ini
+++ b/nrutils/config/bradwr.ini
@@ -26,5 +26,8 @@ is_extrapolated = 0
 # Toggle for whether waveform is scaled by extration radius or not
 is_rscaled = 0
 
+# Toggle for whether extraction parameter is for scaling (ie r in M) or not (eg for BAM)
+r_for_scaling = 0
+
 # Name of handler file within install directory: .../nrutils/handlers/[handler_name].py
 handler_name = maya
