--- a/nrutils/config/bradwr.ini
+++ b/nrutils/config/bradwr.ini
@@ -1,13 +1,12 @@
 
-#
-institute = bam
+# Superficial label for the institute
+institute = gt
 
-#
-metadata_id = .bbh
+# File extension of metadata files. NOTE that the assumtion is that every simulation contains at least of these files.
+metadata_id = .par
 
 # Directory where all smulation folders are stored. The assumtion is that each simulation folder contains a related metadata file with a filname which contains the metadata_id
-#catalog_dir = ~/MOUNT/tmp/gluster/hogshead/NR_data/ReducedData-hogshead/dirac-nr-followup/
-catalog_dir = /Users/jthompson/hmnt/hogshead/NR_data/ReducedData-hogshead/,/Users/shrobanaghosh/gluster/NR_data/ReducedData-hogshead/,/gluster/hogshead/NR_data/ReducedData-hogshead/, ~/MOUNT/tmp/gluster/hogshead/NR_data/ReducedData-hogshead/,/Users/markodh/sshfs-atlas2/gluster/hogshead/NR_data/ReducedData-hogshead/, /Users/Eleanor/Documents/Jupyter/Precession/Precession_angles/minion_data/,/Users/alex/mount/minion/NR_data/ReducedData-hogshead/
+catalog_dir = /Users/book/MOUNT/tmp/gluster/hogshead/NR_data/GT-MAYA/, /Users/book/MOUNT/datafiles@gatech/Waveforms/, /gluster/hogshead/NR_data/GT-MAYA/, /nethome/numrel/datafiles/Waveforms/, /Users/jthompson/hmnt/hogshead/NR_data/GT-MAYA/
 
 # NOTE standard parameter order for every simulation catalog
 # extraction_parameter, l, m, level
@@ -15,17 +14,17 @@ catalog_dir = /Users/jthompson/hmnt/hogshead/NR_data/ReducedData-hogshead/,/User
 
 # NOTE that the ordering here is: extraction_parameter, l, m, level
 # NOTE that information on the string formatting here can be found at https://pyformat.info/
-data_file_name_format = /Psi4ModeDecomp/psi3col.r{0:d}.l{3:d}.l{1:d}.m{2:d}.gz
+data_file_name_format = mp_WeylScal4::Psi4i_l{1:d}_m{2:d}_r{0:1.2f}.asc, Ylm_WEYLSCAL4::Psi4r_l{1:d}_m{2:d}_r{0:1.2f}.asc
 
 
 # NOTE that the ordering here is: default_extraction_parameter, default_level. NOTE that not all groups use level as a sepcifier and that not all levels exist for each single simulation.
-default_par_list = 5,5
+default_par_list = 75,0
 
-#
+# Toggle for whether the simulations are extrapoled to infinity
 is_extrapolated = 0
 
 # Toggle for whether waveform is scaled by extration radius or not
-is_rscaled = 1
+is_rscaled = 0
 
 # Name of handler file within install directory: .../nrutils/handlers/[handler_name].py
-handler_name = bam
+handler_name = maya
