updating hogshead.ini

--- a/nrutils/config/hogshead.ini
+++ b/nrutils/config/hogshead.ini
@@ -7,7 +7,7 @@ metadata_id = .bbh
 
 # Directory where all smulation folders are stored. The assumtion is that each simulation folder contains a related metadata file with a filname which contains the metadata_id
 #catalog_dir = ~/MOUNT/tmp/gluster/hogshead/NR_data/ReducedData-hogshead/dirac-nr-followup/
-catalog_dir = /Users/jthompson/hmnt/hogshead/NR_data/ReducedData-hogshead/,/Users/shrobanaghosh/gluster/NR_data/ReducedData-hogshead/,/gluster/hogshead/NR_data/ReducedData-hogshead/, ~/MOUNT/tmp/gluster/hogshead/NR_data/ReducedData-hogshead/,/Users/markodh/sshfs-atlas2/gluster/hogshead/NR_data/ReducedData-hogshead/, /Users/Eleanor/Documents/Jupyter/Precession/Precession_angles/minion_data/,/Users/alex/mount/minion/NR_data/ReducedData-hogshead/
+catalog_dir = /Users/jthompson/hmnt/hogshead/NR_data/ReducedData-hogshead/,/Users/shrobanaghosh/gluster/NR_data/ReducedData-hogshead/,/gluster/hogshead/NR_data/ReducedData-hogshead/, ~/MOUNT/tmp/gluster/hogshead/NR_data/ReducedData-hogshead/,/Users/markodh/sshfs-atlas2/gluster/hogshead/NR_data/ReducedData-hogshead/, /Users/Eleanor/Documents/Jupyter/Precession/Precession_angles/minion_data/,/Users/eleanorhamilton/mnt/gw-data/NR_data/,/Users/alex/mount/minion/NR_data/ReducedData-hogshead/
 
 # NOTE standard parameter order for every simulation catalog
 # extraction_parameter, l, m, level
