expanding emr interface

--- a/nrutils/config/emr.ini
+++ b/nrutils/config/emr.ini
@@ -6,8 +6,8 @@ institute = umass
 metadata_id = .md
 
 # Directory where all smulation folders are stored. The assumtion is that each simulation folder contains a related metadata file with a filname which contains the metadata_id
-#catalog_dir = ~/MOUNT/tmp/gluster/hogshead/NR_data/ReducedData-hogshead/dirac-nr-followup/
-catalog_dir = /Volumes/lucidum/emr-equatorial-waveforms-tmp/
+catalog_dir = /Volumes/lucidum/emr-waveforms-tmp/
+; catalog_dir = /Volumes/lucidum/emr-equatorial-waveforms-tmp/
 
 # NOTE standard parameter order for every simulation catalog
 # extraction_parameter, l, m, level
@@ -29,6 +29,9 @@ is_rscaled = 1
 
 # Data type
 __disk_data_kind__ = strain
+
+# Tag for whether set is of the extreme massratio type and waveforms are scaled by smaller mass
+__is_extreme_mass_ratio__ = 1
 
 # Name of handler file within install directory: .../nrutils/handlers/[handler_name].py
 handler_name = emr
