--- a/nrutils/config/rit.ini
+++ b/nrutils/config/rit.ini
@@ -1,13 +1,12 @@
 
 #
-institute = bam
+institute = rit
 
 #
-metadata_id = .bbh
+metadata_id = Metadata
 
 # Directory where all smulation folders are stored. The assumtion is that each simulation folder contains a related metadata file with a filname which contains the metadata_id
-#catalog_dir = ~/MOUNT/tmp/gluster/gw-data/NR_data/ReducedData-hogshead/dirac-nr-followup/
-catalog_dir = /Users/jthompson/hmnt/hogshead/NR_data/ReducedData-hogshead/,/Users/shrobanaghosh/gluster/NR_data/ReducedData-hogshead/,/gluster/gw-data/NR_data/ReducedData-hogshead/, ~/MOUNT/tmp/gluster/gw-data/NR_data/ReducedData-hogshead/,/Users/markodh/sshfs-atlas2/gluster/gw-data/NR_data/ReducedData-hogshead/, /Users/Eleanor/Documents/Jupyter/Precession/Precession_angles/minion_data/,/Users/eleanorhamilton/mnt/gw-data/NR_data/,/Users/alex/mount/minion/NR_data/ReducedData-hogshead/
+catalog_dir = /Volumes/lucidum/rit-catalog/Data/
 
 # NOTE standard parameter order for every simulation catalog
 # extraction_parameter, l, m, level
@@ -15,17 +14,23 @@ catalog_dir = /Users/jthompson/hmnt/hogshead/NR_data/ReducedData-hogshead/,/User
 
 # NOTE that the ordering here is: extraction_parameter, l, m, level
 # NOTE that information on the string formatting here can be found at https://pyformat.info/
-data_file_name_format = /Psi4ModeDecomp/psi3col.r{0:d}.l{3:d}.l{1:d}.m{2:d}.gz
+data_file_name_format = rPsi4_l{1:d}_m{2:d}_rInf.asc
 
 
 # NOTE that the ordering here is: default_extraction_parameter, default_level. NOTE that not all groups use level as a sepcifier and that not all levels exist for each single simulation.
-default_par_list = 5,5
+default_par_list = 0,0
 
 #
-is_extrapolated = 0
+is_extrapolated = 1
 
 # Toggle for whether waveform is scaled by extration radius or not
 is_rscaled = 1
 
+# Data type
+__disk_data_kind__ = psi4
+
+# Tag for whether set is of the extreme massratio type and waveforms are scaled by smaller mass
+__is_extreme_mass_ratio__ = 0
+
 # Name of handler file within install directory: .../nrutils/handlers/[handler_name].py
-handler_name = bam
+handler_name = rit
